# paprika

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build-api.yml  test.yml
src/paprika_api/: exceptions.py  groceries.py  notify.py  pantry.py  paprika.py  sync.py
