[project]
name = "paprika-api"
version = "0.1.1"
description = "Unofficial SDK for Paprika API"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "requests~=2.32",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/smartflutist661/paprika.git"
Issues = "https://github.com/smartflutist661/paprika/issues"
Changelog = "https://github.com/smartflutist661/paprika/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = ["src"]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "flake8-print>=5.0.0",
    "isort>=5.13.2",
    "mypy>=1.14.1",
    "pylint>=3.3.3",
    "types-requests>=2.32.0.20241016",
]

[tool.mypy]
warn_no_return = true
warn_unreachable = true
strict = true

[tool.pylint]
logging-format-style = "new"
disable="logging-fstring-interpolation"

[tool.black]
line_length = 99

[tool.isort]
profile = "black"
line_length = 99
combine_as_imports = true
force_grid_wrap = 2

